<resources>
    <string name="app_name">SE2-Android</string>
    <string name="tab_home_label">Home</string>
    <string name="tab_devices_label">Devices</string>
    <string name="tab_configuration_label">Configuration</string>
    <string name="Enter_password">Enter Password</string>
    <string name="show_password">Show Password</string>
    <string name="Firstname">Fistname</string>
    <string name="Enter_email">Enter Email</string>
    <string name="Lastname">Lastname</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign up!</string>
    <string name="not_registered">Not registered?</string>
    <string name="login">Login</string>
    <string name="create">Create</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connect_to_household">Connect to household</string>
    <string name="or">OR</string>
    <string name="join_household">Join Household</string>
    <string name="create_household">Create Household</string>
</resources>