<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="28dp"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="38sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/uName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_design"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:elevation="16dp"
            android:hint="@string/Enter_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textSize="22sp" />


        <EditText
            android:id="@+id/pWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/edittext_design"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:elevation="16dp"
            android:hint="@string/Enter_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/show_password"
                android:textSize="15sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/rememberMeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:text="Remember me"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>


        <Button
            android:id="@+id/loginButton"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/login"
            android:textColor="@color/login_blue"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_registered"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/toSignUp"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/sign_up"
                android:textAllCaps="false" />
        </LinearLayout>


        <Button
            android:id="@+id/fgtPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/forgot_password"
            android:textAllCaps="false" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>