<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"

    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Login.RegisterFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="Create account"
        android:textColor="@color/black"
        android:textSize="42sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/firstNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/edittext_design"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:elevation="16dp"
        android:hint="@string/Firstname"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/lastNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_design"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:elevation="16dp"
        android:hint="@string/Lastname"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_design"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:elevation="16dp"
        android:hint="@string/Enter_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_design"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:elevation="16dp"
        android:hint="@string/Enter_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <CheckBox
        android:id="@+id/checkPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@color/white"
        android:text="@string/show_password"
        android:textSize="15sp"
        android:textStyle="bold" />

    <AutoCompleteTextView
        android:id="@+id/option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/edittext_design"
        android:completionThreshold="1"
        android:elevation="16dp"
        android:singleLine="true"
        android:inputType="none"
        android:minHeight="48dp"
        android:textSize="22sp"
        android:hint="Choose option"/>

    <EditText
        android:id="@+id/optionEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_design"
        android:drawableStart="@drawable/ic_baseline_home_24"
        android:elevation="16dp"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minHeight="48dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/createButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn"
            android:gravity="center"
            android:text="@string/create"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already registered?"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="Go back!"
            android:textAllCaps="false" />
    </LinearLayout>


</LinearLayout>